# obelisk-websocket-demo

./: LICENSE  default.nix
backend/: backend.cabal
backend/src/: Backend.hs  Server.hs  WebSocketChat.hs
common/: common.cabal
common/src/Common/: Base58.hs  Crypto.hs  Lang.hs  ParseUtils.hs  Route.hs  Skl.hs  WsProtocol.hs
common/src/Common/Base58/: Internal.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs  Ui.hs
