name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , snap
               , websockets-snap
               , text-show
  exposed-modules:
                  Backend
  other-modules: Backend.WebSocketChat
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N"

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , snap
               , text-show
