name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , cryptonite >= 0.26
               , bytestring >= 0.10
               , base58-bytestring
               , megaparsec
               , singletons
               , text-show
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
